<resources>
    <string name="app_name">KKQuiz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="search_placeholder">name a signer</string>
    <string name="search_commit">GO</string>

    <string name="prepare_message">要開始挑戰了嗎？</string>
    <string name="prepare_progress_message">準備中</string>
    <string name="prepare_target">挑戰目標</string>
    <string name="play_check_answer">對答案</string>
    <string name="play_asking">這是什麼歌？</string>
    <string name="play_next">下一題</string>
    <string name="result_title">挑戰結束</string>
    <string name="result_play_again">重新挑戰</string>
    <string name="result_kkbox">去 KKBOX 聽更多</string>
</resources>
