<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.beibeilab.kkquiz.result.ResultFragment">




    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:text="@string/result_title"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textArtist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="Artist" />

    <Button
        android:id="@+id/buttonPlayAgain"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="132dp"
        android:layout_marginEnd="62dp"
        android:layout_marginStart="62dp"
        android:background="@drawable/button_pink"
        android:text="@string/result_play_again"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonKKBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="62dp"
        android:layout_marginStart="62dp"
        android:background="@drawable/btn_blue"
        android:text="@string/result_kkbox"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/buttonPlayAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="368dp"
        android:layout_height="94dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textArtist"
        android:visibility="invisible"/>
</android.support.constraint.ConstraintLayout>
